# gnome-xcf-thumbnailer

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure.ac  flatspec.c  gnome-xcf-thumbnailer.c  gnome-xcf-thumbnailer.schemas.in  xcf2png.c
